--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@linear/sdk": "^73.0.0",
     "@radix-ui/react-icons": "^1.3.2",
     "next": "16.1.6",
     "react": "19.2.3",
