--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@linear/sdk": "^73.0.0",
     "@radix-ui/react-icons": "^1.3.2",
     "@supabase/supabase-js": "^2.94.0",
+    "motion": "^12.33.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
